--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -224,7 +224,7 @@ L'idea alla base dell'introduzione di QoS in Internet è che sui nodi intermedi 
 hanno delle informazioni sullo stato del servizio. Un router semplice prende e
 rispedisce i pacchetti, in generale sfruttando la politica FIFO, senza sfruttare
 tutte le possibilità per l'instradamento: garantisce best-eort, ma non QoS,
-poich` i flussi sono limitati da altri flussi!
+poiché i flussi sono limitati da altri flussi!
 Lo sviluppo sarebbe quindi quello di realizzare un router che ragiona in termini dierenziati : deve essere in grado
 quindi di marcare i flussi, e deve riuscire
 a trattare la gestione dei flussi in maniera da favorire i flussi più prioritari (magu
